force-app/main/default/objects/NotificationLog__c/NotificationLog__c.object-meta.xml
<CustomObject>
    <description>[i2sema] Notification Log 발송요청/발송재시도/발송결과(성공/실패)</description>
    <label>Notification Log</label>
    <nameField>
        <displayFormat>NL-{yyMMdd}-{00000000}</displayFormat>
        <label>Notification Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Log</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>