force-app/main/default/objects/NotificationLog__c/fields/IF_Code2__c.field-meta.xml
<CustomField>
    <fullName>IF_Code2__c</fullName>
    <description>IF Code2 2차발송채널 실패코드 
1차 발송 실패시, 2차발송채널 상태코드</description>
    <inlineHelpText>1차 발송 실패시, 2차발송채널 상태코드</inlineHelpText>
    <label>IF Code2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IFCode</valueSetName>
    </valueSet>
</CustomField>