force-app/main/default/objects/NotificationLog__c/fields/IF_Code__c.field-meta.xml
<CustomField>
    <fullName>IF_Code__c</fullName>
    <description>SEMA Interface Code</description>
    <label>IF Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IFCode</valueSetName>
    </valueSet>
</CustomField>