force-app/main/default/objects/NotificationLog__c/fields/IF_FailCode2_c__c.field-meta.xml
<CustomField>
    <fullName>IF_FailCode2_c__c</fullName>
    <description>2차 발송 코드</description>
    <label>IF_FailCode2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>