force-app/main/default/objects/NotificationLog__c/fields/IF_FailCode__c.field-meta.xml
<CustomField>
    <fullName>IF_FailCode__c</fullName>
    <description>IF_FailCode</description>
    <label>IF_FailCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>