force-app/main/default/objects/NotificationLog__c/fields/Notification__c.field-meta.xml
<CustomField>
    <fullName>Notification__c</fullName>
    <label>Notification</label>
    <referenceTo>Notification__c</referenceTo>
    <relationshipLabel>Notification Log</relationshipLabel>
    <relationshipName>NotificationLogs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>