force-app/main/default/objects/NotificationLog__c/fields/RequestDateTime__c.field-meta.xml
<CustomField>
    <fullName>RequestDateTime__c</fullName>
    <label>Request DateTime</label>
    <type>DateTime</type>
</CustomField>