force-app/main/default/objects/NotificationLog__c/fields/ResponseDateTime__c.field-meta.xml
<CustomField>
    <fullName>ResponseDateTime__c</fullName>
    <label>Response DateTime</label>
    <type>DateTime</type>
</CustomField>