force-app/main/default/objects/NotificationLog__c/fields/ResponseMessage__c.field-meta.xml
<CustomField>
    <fullName>ResponseMessage__c</fullName>
    <label>Response Message</label>
    <type>TextArea</type>
</CustomField>