force-app/main/default/objects/NotificationLog__c/fields/Status2__c.field-meta.xml
<CustomField>
    <fullName>Status2__c</fullName>
    <description>2차 발송 채널 상태</description>
    <inlineHelpText>2차 발송 채널 상태</inlineHelpText>
    <label>Status2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>