force-app/main/default/objects/NotificationLog__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>발송 상태값 관리
- Validation Error &gt; Validation 실패
- Requested  &gt; 요청 송신된 상태
- Rejected     &gt; 요청 거부된 상태
- Success     &gt;  요청 정상 처리
- Fail             &gt;  요청 처리 실패</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Validation Error</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>