force-app/main/default/objects/NotificationLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Notification__c</columns>
    <columns>IF_Code__c</columns>
    <columns>IF_FailCode__c</columns>
    <columns>Status__c</columns>
    <columns>ResponseMessage__c</columns>
    <columns>RequestDateTime__c</columns>
    <columns>ResponseDateTime__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>